--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,7 +48,7 @@ before_build:
   - ps: 7z e "$env:appveyor_build_folder\External\KSPLibraries\KSPLibraries.7z" -p"$env:ZIPPASSWORD" -o"$env:appveyor_build_folder\External\KSPLibraries"
   - ps: mkdir "$env:appveyor_build_folder\FinalFiles\$env:configuration\LMPClient\GameData\LunaMultiplayer\"
    #Copy harmony dependency
-  - ps: xcopy /y /s "$env:appveyor_build_folder\External\Dependencies\Harmony\" "$env:appveyor_build_folder\FinalFiles\$env:configuration\LMPClient\GameData\"
+  - ps: xcopy /y /s "$env:appveyor_build_folder\External\KSPLibraries\" "$env:appveyor_build_folder\FinalFiles\$env:configuration\LMPClient\GameData\"
   - nuget restore
 build:
   parallel: true
