Extend IPv6 support
**Client**
- Initiate single global ClientConnection at startup, don't replace after disconnect
- Make socket IPv4-only if OS doesn't support IPv6
- Implement IPv6->IPv4 fallback logic in ConnectToServer for direct connections
- The manual retries in `ConnectToServer()` have been removed and replaced by Lidgren's builtin retry logic configured via `Config.MaximumHandshakeAttempts` and `Config.ResendHandshakeInterval`
- `SendNetworkMessage()` starts the `NetClient` when sending unconnected messages to the master servers if necessary, usually when retrieving the server list.
- Servers in the server list are now updated when receiving new data (especially useful for debugging, but might benefit other situations as well)
- Communicate IPv6 addresses with master servers when asking for NAT introduction
- `ServerIsInLocalLan()` compares the prefix for IPv6 addresses (thanks to the global uniqueness of GlobalUnicastAddresses this is fairly reliable)
- Add debug option to overwrite the master server list
- Show IPv6 RTT in server list

**Server**
- Communicate IPv6 addresses with master servers
- Add debug setting to overwrite master server list

**Master server**
- Support IPv6 addresses for servers, send to clients
- Send another NAT introduction for IPv6, if both client and server have IPv6 enabled:
  - The first NAT introduction message triggers hole punching for both the public IPv4 addresses and the IPv6 addresses. This is unavoidable, since we need to send the trigger message to the public IPv4 addresses of the client and server.
    This one is likely to succeed in the most common case (as long as both client and server have working IPv6, or the IPv4 NAT in between allows hole punching).
  - The second NAT introduction message triggers hole punching for both the public IPv4 addresses again and the internal IPv4 addresses. It is sent after a delay of 50 ms, to allow some cooldown after the first round (even though my testing showed there's no prob

--- a/LmpMasterServer/LmpMasterServer.csproj
+++ b/LmpMasterServer/LmpMasterServer.csproj
@@ -154,11 +154,8 @@
   <Import Project="..\LmpCommon\LmpCommon.projitems" Label="Shared" />
   <Import Project="..\LmpGlobal\LmpGlobal.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup Condition="'$(OS)' != 'Unix'">
-    <PostBuildEvent>xcopy /y /s "$(TargetDir)*.*" "$(SolutionDir)MasterServer\bin\$(ConfigurationName)"</PostBuildEvent>
-  </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent />
+    <PostBuildEvent Condition="'$(OS)' != 'Unix'">xcopy /y /s "$(TargetDir)*.*" "$(SolutionDir)MasterServer\bin\$(ConfigurationName)"</PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\External\Nuget\Microsoft.VisualStudio.Threading.Analyzers.16.10.56\build\Microsoft.VisualStudio.Threading.Analyzers.targets" Condition="Exists('..\External\Nuget\Microsoft.VisualStudio.Threading.Analyzers.16.10.56\build\Microsoft.VisualStudio.Threading.Analyzers.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
