--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           file: "Dockerfile_Server"
           push: true
-          tags: ghcr.io/celestialorb/LunaMultiplayer:latest
+          tags: ghcr.io/celestialorb/ksp-lmp:latest
