--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,11 @@ jobs:
   build-container-image:
     runs-on: ubuntu-latest
     steps:
+      - name: login
+        run: |
+          echo $REGISTRY_PAT | docker login ghcr.io -u celestialorb --password-stdin
+        env:
+          REGISTRY_PAT: ${{ secrets.REGISTRY_PAT }}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
